左图二修改BUG

--- a/src/views/index/indexTabdialog/cl/patrolStats/patrolStats.scss
+++ b/src/views/index/indexTabdialog/cl/patrolStats/patrolStats.scss
@@ -20,7 +20,7 @@
     }
 
     .risk-stats-charts-wrapper {
-        padding: 100px 0 60px 0;
+        padding: 20px 0;
         .patrol-stats-charts-content {
             .patrol-stats-chart {
                 height: 280px;
