--- a/src/assets/styles/globalCenterIndex.scss
+++ b/src/assets/styles/globalCenterIndex.scss
@@ -676,3 +676,35 @@
     padding-bottom: 0;
     margin-top: -0.15rem;
 }
+.dataMainCountBottom {
+    position: absolute;
+    width: 927px;
+    height: 47px;
+
+    opacity: 1;
+    border-radius: 8px 8px 0px 0px;
+    bottom: 23px;
+    width: 49%;
+    height: 282.95px;
+    border-radius: 8px;
+    overflow: hidden;
+    background: linear-gradient(180deg, #1b2944 0%, #213b57 100%);
+}
+.dataMainCountBottom .cardItemB .cardTit {
+    background: linear-gradient(90deg, #0c4283 0%, rgba(30, 56, 86, 0) 100%) !important;
+    z-index: 99;
+    opacity: 1;
+}
+.cardItem_box {
+    width: 100%;
+    height: 276px;
+
+    opacity: 1;
+    border-radius: 8px;
+    padding: 0 10px;
+}
+.globalCenterIndexCon .mainConb .dataMainCountBottom .cardItemB {
+    height: 10%;
+    box-sizing: border-box;
+    padding-bottom: 2.5;
+}
