--- a/src/assets/styles/globalCenterIndex.scss
+++ b/src/assets/styles/globalCenterIndex.scss
@@ -678,14 +678,14 @@
 }
 .dataMainCountBottom {
     position: absolute;
-    width: 927px;
+
     height: 47px;
 
     opacity: 1;
     border-radius: 8px 8px 0px 0px;
     bottom: 23px;
     width: 49%;
-    height: 282.95px;
+    height: 30.5%;
     border-radius: 8px;
     overflow: hidden;
     background: linear-gradient(180deg, #1b2944 0%, #213b57 100%);
