--- a/src/assets/styles/globalCenterIndex.scss
+++ b/src/assets/styles/globalCenterIndex.scss
@@ -508,8 +508,9 @@
             .cardItemS {
                 // background-color: red;
                 height: calc(100% - 0.1rem);
-                background: linear-gradient(180deg, #19253e98 0%, #223e6198 100%);
-                box-shadow: inset 0px 0px 30px 0px rgba(37, 166, 255, 0.5);
+              //  background: linear-gradient(180deg, #19253e98 0%, #223e6198 100%);
+                background: linear-gradient(180deg, #19253E 0%, #223E61 100%);
+              //  box-shadow: inset 0px 0px 30px 0px rgba(37, 166, 255, 0.5);
                 border-radius: 8px 8px 8px 8px;
                 .cardTit {
                     height: 0.39rem;
@@ -698,9 +699,11 @@
     border-radius: 8px;
     overflow: hidden;
     // background: linear-gradient(180deg, #1b2944 0%, #213b57 100%);
-    box-shadow: inset 0px 0px 30px 0px rgba(37, 166, 255, 0.5);
-    // background: linear-gradient(180deg, #19253e98 0%, #223e6198 100%);
-    background: linear-gradient(180deg, #19253e98 0%, #223e6198 100%);
+  //  box-shadow: inset 0px 0px 30px 0px rgba(37, 166, 255, 0.5);
+ 
+ //   background: linear-gradient(180deg, #19253e98 0%, #223e6198 100%);
+ //   background: linear-gradient(180deg, #19253e98 0%, #223e6198 100%);
+ background: linear-gradient(180deg, #19253E 0%, #223E61 100%)!important;
     // box-shadow: inset 0px 0px 30px 0px rgba(37 166 255 / 50%);
 }
 .dataMainCountBottom .cardItemB .cardTit {
@@ -723,15 +726,15 @@
 }
 
 .dataMainCount_top {
-    box-shadow: inset 0px 0px 30px 0px rgba(37, 166, 255, 0.5);
-    background: linear-gradient(180deg, #19253e98 0%, #223e6198 100%);
+   // box-shadow: inset 0px 0px 30px 0px rgba(37, 166, 255, 0.5);
+ //   background: linear-gradient(180deg, #172840 100%, #203f65 0%)!important;
     .cardTit {
         background: linear-gradient(90deg, rgba(0, 95, 201, 0.5) 0%, rgba(0, 95, 201, 0) 100%) !important;
     }
 }
 .globalCenterIndexCon .mainClas .midConb .dataMainCount_top {
     height: 1.6rem;
-    background: linear-gradient(360deg, rgba(23, 71, 126, 0) 0%, #28589f90 100%);
+    background: linear-gradient(180deg, #19253E 0%, #223E61 100%)!important;
     border-radius: 8px 8px 8px 8px;
     padding-bottom: 20px;
 }
