--- a/src/assets/styles/globalCenterIndex.scss
+++ b/src/assets/styles/globalCenterIndex.scss
@@ -707,7 +707,7 @@
     // box-shadow: inset 0px 0px 30px 0px rgba(37 166 255 / 50%);
 }
 .dataMainCountBottom .cardItemB .cardTit {
-    z-index: 99;
+  //  z-index: 99;
     opacity: 1;
     background: linear-gradient(90deg, rgba(0, 95, 201, 0.5) 0%, rgba(0, 95, 201, 0) 100%) !important;
 }
