scss样式，右一样式

--- a/src/assets/styles/globalCenterIndex.scss
+++ b/src/assets/styles/globalCenterIndex.scss
@@ -789,7 +789,8 @@
     //   background: linear-gradient(180deg, #19253e98 0%, #223e6198 100%);
     //   background: linear-gradient(180deg, #19253e98 0%, #223e6198 100%);
     // 10月12 好改    background: linear-gradient(180deg, #19253E 0%, #223E61 100%)!important;
-    background: linear-gradient(180deg, #19253e 0%, #223e61 100%) !important;
+    // 10.14号注释
+    // background: linear-gradient(180deg, #19253e 0%, #223e61 100%) !important;
 
     // box-shadow: inset 0px 0px 30px 0px rgba(37 166 255 / 50%);
 }
